# Ethics

xai-platform/: .gitignore  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  ISSUES.md  Loan Prediction.py  Medical Cost Insurance.ipynb  PHASE_3_IMPLEMENTATION_GUIDE.md  PROJECT_REPORT.md  README-XAI-EXTENSIONS.md  Untitled6.ipynb  X_train_cleaned.csv  carpriceprediction.py  docker-compose.prod.yml  docker-compose.yml  heart_disease_prediction.py  list_car_names.py  loan_model_pipeline.pkl  patch.py  readme.md  test_e2e_loan.py  test_heart_pipeline.py  test_lime_car.py  test_new_frameworks_e2e.py  test_pipeline.pkl  test_pipeline_full.py  titanic_feature_schema.json  titanicfrocompetition.py  tmp_verify_e2e.py  trail.py  train_pipeline.py  upload_car_model.py  upload_loan_model.py
xai-platform/backend/: .dockerignore  .env.production.example  .gitignore  Dockerfile  FIX_SCHEMA_README.md  clear_explanations.py  fix_feature_schemas.py  requirements.txt  test_heart_model.py  test_jwt.py
xai-platform/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
xai-platform/nginx/: nginx.prod.conf
xai-platform/notebooks/: AIX360_Explain.ipynb  Alibi_Explain.ipynb  InterpretML_Explain.ipynb  generate_notebooks.py  requirements-xai-frameworks.txt
xai-platform/sdk/: MANIFEST.in  README.md  pyproject.toml
xai-platform/sdk/tests/: test_client.py
xai-platform/sdk/xai_platform/: __init__.py  client.py  exceptions.py  models.py
xai-platform/zfile/: Untitled6.ipynb  check_existing_models.py  heart_disease_pipeline.pkl  test_api_integration.py  (+7 more)
(+98 files in other folders)
